Refactor: (BRD-102) 멀티모듈 -> 단일모듈 간소화 (#61)
* Refactor: (BRD-102) core/logging 모듈 이동

* Refactor: (BRD-102) core-api 모듈 이동

* Refactor: (BRD-102) domain-core, external-email-format-checker 이동

* Refactor: (BRD-102) domain-member 이동

* Refactor: (BRD-102) api-core 및 external-db(member 부분) 이동

* Refactor: (BRD-102) external-redis(member 부분) 이동

* Refactor: (BRD-102) domain-auth 이동

* Refactor: (BRD-102) domain-board 이동

* Refactor: (BRD-102) application-member 이동

* Refactor: (BRD-102) application-auth 이동

* Refactor: (BRD-102) application-board 이동

* Refactor: (BRD-102) api-deploy 이동

* Refactor: (BRD-102) 빌드스크립트 환경 변수 수정

* Refactor: (BRD-102) api-member 모듈 이동

* Refactor: (BRD-102) api-auth 모듈 이동

* Refactor: (BRD-102) external-secret 모듈 이동

* Refactor: (BRD-102) external-message 모듈 이동

* Refactor: (BRD-102) external-exception-handle 모듈 이동

* Refactor: (BRD-102) external-email-sender 모듈 이동

* Refactor: (BRD-102) external-db 모듈 이동

* Refactor: (BRD-102) external-redis 모듈 이동

* Refactor: (BRD-102) event-publisher-member 모듈 이동

* Refactor: (BRD-102) event-consumer-member 모듈 이동

* Test: (BRD-102) 테스트 컨텍스트 로딩문제 해결

* Test: (BRD-102) 테스트코드 오류 수정

* CI/CD: (BRD-102) 빌드스크립트 수정

* Chore: (BRD-102) 의존성 버전 조정